# simple-perceptron

./: .gitignore  README.md  perceptron.cabal
src/: Main.hs  Perceptron.hs
