name:                perceptron
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/qsctr/perceptron
license:             MIT
license-file:        LICENSE
author:              Bretton
maintainer:          brettonchen@gmail.com
copyright:           2017 Bretton
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable perceptron
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Perceptron
  default-language:    Haskell2010
  build-depends:       ansi-terminal
                     , base >= 4.7 && < 5
                     , gloss
                     , random
  ghc-options:         -Wall -threaded
